adding mexc vesion1

--- a/conf.ini
+++ b/conf.ini
@@ -3,8 +3,12 @@ symbol_pair_id_mapping = "./symbol_pair_id_mapping2.csv"
 request_per_time = 1
 error_log_file = "./error_log.txt"
 
-[Ramzinex_Nobitex]
+[Ramzinex]
 ramzinex_order_book_endpoint = "http://127.0.0.1:8001/exchange/api/v1.0/exchange/orderbooks/pair_id/buys_sells"
+
+[Nobitex]
 nobitex_order_book_endpoint = "https://api.nobitex.ir/v2/orderbook/"
 
+[Mexc]
+Mexc_order_book_endpoint = "https://api.nobitex.ir/v2/orderbook/"
 
